# cuttlefish

./: README.md
AD/: collect_environment_output
AE/: hclib.patch  setup.sh
AE/apps_hclib/: Makefile  heat.cpp  sor.cpp
AE/apps_hclib/inc/: common.h  usehclib.h
AE/apps_omp/: Makefile  heat.cpp  makefile.omp  sor.cpp
AE/apps_omp/AMG/: Makefile.include
AE/apps_omp/AMG/test/: Makefile  amg.c
AE/apps_omp/HPCCG/: HPCCG.cpp  Makefile  main.cpp
AE/apps_omp/inc/: common.h  my_malloc.h  timer.h  useomp.h
AE/apps_omp/miniFE/openmp/src/: Makefile  cg_solve.hpp  main.cpp  make_targets
AE/apps_omp/miniFE/openmp/utils/: utils.cpp
AE/apps_omp/uts/: Makefile  config.in  uts_shm.c
AE/cuttlefish/: Makefile.am  clean.sh  configure.ac  install.sh
AE/cuttlefish/inc/: cuttlefish.h  cuttlefish.mak
AE/cuttlefish/src/: Makefile.am  cuttlefish-daemon.cpp  cuttlefish-lbPolicy.cpp  cuttlefish-perfcounter.cpp  cuttlefish-setFrequency.cpp  cuttlefish-tipiList.cpp
AE/cuttlefish/src/inc/: cuttlefish-archConstant.h  cuttlefish-internal.h  cuttlefish-policy.h  haswell-arch.h
AE/sc21/artifact/paper_results/: create_graphs.sh
AE/sc21/artifact/paper_results/scripts/: FQ_opt.py  T_inv_choose.py  figure2-a.py  figure2-b.py  figure3-a.py  figure3-b.py  policy_mapping.sh  policy_script.py
AE/sc21/artifact/reproducibility/: create_Table_2.sh  create_Table_3.sh  create_fig10.sh  create_fig11.sh  create_fig2.sh  create_fig3.sh
AE/sc21/artifact/reproducibility/scripts/: T_inv_choose.py  figure2-a.py  figure2-b.py  figure3-a.py  figure3-b.py  policy_script.py  policy_timeline.sh
AE/scripts/: experiment_motivation_haswell.sh  experiment_policy_haswell_HClib.sh  experiment_policy_haswell_OMP.sh  experiment_policy_t_inv.sh  experiment_timeline_haswell.sh
